force-app/main/default/objects/pymtTest__Retry_Log__c/pymtTest__Retry_Log__c.object-meta.xml
<CustomObject>
    <description>Tracks payment retry attempts for invoices</description>
    <label>Retry Log</label>
    <nameField>
        <displayFormat>RL-{0000000}</displayFormat>
        <label>Retry Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retry Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>