force-app/main/default/objects/pymtTest__Retry_Log__c/fields/pymtTest__Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Attempt_Date__c</fullName>
    <description>Date and time of the retry attempt</description>
    <label>Attempt Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>