force-app/main/default/objects/pymtTest__Retry_Log__c/fields/pymtTest__Invoice__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The invoice this retry attempt is for</description>
    <label>Invoice</label>
    <referenceTo>pymtTest__Invoice__c</referenceTo>
    <relationshipLabel>Retry Logs</relationshipLabel>
    <relationshipName>Retry_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>