force-app/main/default/objects/pymtTest__Retry_Log__c/fields/pymtTest__Message__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Message__c</fullName>
    <description>Message or error details from the retry attempt</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>