force-app/main/default/objects/pymtTest__Retry_Log__c/fields/pymtTest__Status__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Status__c</fullName>
    <description>Status of the retry attempt</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>