force-app/main/default/objects/pymtTest__Retry_Log__c/fields/pymtTest__Transaction__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The resulting transaction if successful</description>
    <label>Transaction</label>
    <referenceTo>pymtTest__Transaction__c</referenceTo>
    <relationshipLabel>Retry Logs</relationshipLabel>
    <relationshipName>Retry_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>